force-app/main/default/objects/Analytics_Model__c/Analytics_Model__c.object-meta.xml
<CustomObject>
    <label>Analytics Model</label>
    <nameField>
        <label>Analytics Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analytics Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>