force-app/main/default/objects/Analytics_Model__c/fields/Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Date__c</fullName>
    <label>Analysis Date</label>
    <type>Date</type>
</CustomField>