force-app/main/default/objects/Analytics_Model__c/fields/Are_emissions_savings_needed__c.field-meta.xml
<CustomField>
    <fullName>Are_emissions_savings_needed__c</fullName>
    <formula>IF(CONTAINS( BTM_Segment__c,&quot;Biogas&quot;), TEXT( Opportunity__r.Q_min_comply_nox_needed__c ),TEXT(Opportunity__r.Q_emissions_savings_needed__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are emissions savings needed?</label>
    <type>Text</type>
</CustomField>