force-app/main/default/objects/Analytics_Model__c/fields/Assessment_Responses__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Responses__c</fullName>
    <label>Assessment Responses</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>