force-app/main/default/objects/Analytics_Model__c/fields/Avoided_Cost_kWh__c.field-meta.xml
<CustomField>
    <fullName>Avoided_Cost_kWh__c</fullName>
    <label>Avoided Cost ($/kWh)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>