force-app/main/default/objects/Analytics_Model__c/fields/Avoided_electricity_rate__c.field-meta.xml
<CustomField>
    <fullName>Avoided_electricity_rate__c</fullName>
    <label>Electric Rate ($/kWh)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>