force-app/main/default/objects/Analytics_Model__c/fields/Backup_Kit__c.field-meta.xml
<CustomField>
    <fullName>Backup_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backup Kit</label>
    <type>Checkbox</type>
</CustomField>