force-app/main/default/objects/Analytics_Model__c/fields/Backup_Kit_Services_Price__c.field-meta.xml
<CustomField>
    <fullName>Backup_Kit_Services_Price__c</fullName>
    <label>Backup Kit Services Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>