force-app/main/default/objects/Analytics_Model__c/fields/BTM_Segment__c.field-meta.xml
<CustomField>
    <fullName>BTM_Segment__c</fullName>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>