force-app/main/default/objects/Analytics_Model__c/fields/Can_customer_monetize_ITC_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Can_customer_monetize_ITC_Depreciation__c</fullName>
    <label>Can customer monetize ITC &amp; Depreciation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>