force-app/main/default/objects/Analytics_Model__c/fields/Can_Monetize__c.field-meta.xml
<CustomField>
    <fullName>Can_Monetize__c</fullName>
    <label>Can Monetize</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ITC</fullName>
            </value>
            <value>
                <fullName>Depreciation</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Deprecation</fullName>
                <isActive>false</isActive>
                <label>Deprecation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>