force-app/main/default/objects/Analytics_Model__c/fields/Capacity_Factor__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Factor__c</fullName>
    <label>Estimated capacity Factor (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>