force-app/main/default/objects/Analytics_Model__c/fields/Capex_hurdle_rate__c.field-meta.xml
<CustomField>
    <fullName>Capex_hurdle_rate__c</fullName>
    <label>Capex hurdle rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>