force-app/main/default/objects/Analytics_Model__c/fields/Carbon_savings__c.field-meta.xml
<CustomField>
    <fullName>Carbon_savings__c</fullName>
    <label>Carbon savings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>