force-app/main/default/objects/Analytics_Model__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Modeling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple indicative model in a known market</fullName>
                <label>Simple indicative model in a known market - 2 days</label>
            </value>
            <value>
                <fullName>Portfolio analysis</fullName>
                <label>Portfolio analysis - 7 days</label>
            </value>
            <value>
                <fullName>Standard indicative model in a known market</fullName>
                <label>Standard indicative model in a known market - 3 days</label>
            </value>
            <value>
                <fullName>Standard Indicative model in a new market</fullName>
                <label>Standard Indicative model in a new market - 5 days</label>
            </value>
            <value>
                <fullName>Detailed model</fullName>
                <label>Detailed model - 6 days</label>
            </value>
            <value>
                <fullName>Detailed multiphase or complex model</fullName>
                <label>Detailed multiphase or complex model - 7 days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>