force-app/main/default/objects/Analytics_Model__c/fields/COD__c.field-meta.xml
<CustomField>
    <fullName>COD__c</fullName>
    <label>Estimated COD</label>
    <type>Date</type>
</CustomField>