force-app/main/default/objects/Analytics_Model__c/fields/Cost_savings_positive_economics_needed__c.field-meta.xml
<CustomField>
    <fullName>Cost_savings_positive_economics_needed__c</fullName>
    <formula>IF(CONTAINS( BTM_Segment__c,&quot;Biogas&quot;), TEXT(Opportunity__r.Q_max_economic_value__c),TEXT(Opportunity__r.Q_cost_savings_needed__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost savings/ positive economics needed?</label>
    <type>Text</type>
</CustomField>