force-app/main/default/objects/Analytics_Model__c/fields/Cumulative_Time_to_Ready_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Time_to_Ready_for_Review__c</fullName>
    <label>Cumulative Time to Ready for Review</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>