force-app/main/default/objects/Analytics_Model__c/fields/Customer_IRR__c.field-meta.xml
<CustomField>
    <fullName>Customer_IRR__c</fullName>
    <label>Customer IRR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>