force-app/main/default/objects/Analytics_Model__c/fields/Customer_NPV_cash_or_PV_ESA__c.field-meta.xml
<CustomField>
    <fullName>Customer_NPV_cash_or_PV_ESA__c</fullName>
    <label>Customer NPV (cash) or PV (ESA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>