force-app/main/default/objects/Analytics_Model__c/fields/Customer_payback_years__c.field-meta.xml
<CustomField>
    <fullName>Customer_payback_years__c</fullName>
    <label>Customer payback (years)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>