force-app/main/default/objects/Analytics_Model__c/fields/Deal_type__c.field-meta.xml
<CustomField>
    <fullName>Deal_type__c</fullName>
    <formula>TEXT(Opportunity__r.Purchase_Vehicle__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal type</label>
    <type>Text</type>
</CustomField>