force-app/main/default/objects/Analytics_Model__c/fields/Details_about_the_project__c.field-meta.xml
<CustomField>
    <fullName>Details_about_the_project__c</fullName>
    <label>Additional modeling request guidance</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>