force-app/main/default/objects/Analytics_Model__c/fields/Electric_Utility__c.field-meta.xml
<CustomField>
    <fullName>Electric_Utility__c</fullName>
    <label>Electric Utility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>