force-app/main/default/objects/Analytics_Model__c/fields/Emissions_comments__c.field-meta.xml
<CustomField>
    <fullName>Emissions_comments__c</fullName>
    <label>Emissions comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>