force-app/main/default/objects/Analytics_Model__c/fields/Energy_Conversion_Charge_kWh_if_ESA__c.field-meta.xml
<CustomField>
    <fullName>Energy_Conversion_Charge_kWh_if_ESA__c</fullName>
    <label>Energy Conversion Charge $/kWh (if ESA)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>