force-app/main/default/objects/Analytics_Model__c/fields/EPC_Price__c.field-meta.xml
<CustomField>
    <fullName>EPC_Price__c</fullName>
    <label>EPC Price ($/kW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>