force-app/main/default/objects/Analytics_Model__c/fields/ESA_Hardware_kW_w_o_referral_fee__c.field-meta.xml
<CustomField>
    <fullName>ESA_Hardware_kW_w_o_referral_fee__c</fullName>
    <label>ESA Hardware $/kW (w/o referral fee)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>