force-app/main/default/objects/Analytics_Model__c/fields/ESA_hurdle_rate__c.field-meta.xml
<CustomField>
    <fullName>ESA_hurdle_rate__c</fullName>
    <label>ESA hurdle rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>