force-app/main/default/objects/Analytics_Model__c/fields/Estimated_Cost_of_Electricity_kWh__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_of_Electricity_kWh__c</fullName>
    <label>Estimated Cost of Electricity ($/kWh)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>