force-app/main/default/objects/Analytics_Model__c/fields/Estimated_Number_of_Meter_Units__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Meter_Units__c</fullName>
    <description>EDS-3626</description>
    <label>Estimated Number of Meter Units</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>