force-app/main/default/objects/Analytics_Model__c/fields/Expected_availability__c.field-meta.xml
<CustomField>
    <fullName>Expected_availability__c</fullName>
    <label>Expected availability</label>
    <length>100</length>
    <type>Text</type>
</CustomField>