force-app/main/default/objects/Analytics_Model__c/fields/Expected_interconnection_timing__c.field-meta.xml
<CustomField>
    <fullName>Expected_interconnection_timing__c</fullName>
    <label>Expected interconnection timing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>