force-app/main/default/objects/Analytics_Model__c/fields/Expected_SLA__c.field-meta.xml
<CustomField>
    <fullName>Expected_SLA__c</fullName>
    <formula>CASE(
    TEXT(Category__c), 
    &quot;Simple indicative model in a known market&quot;, 2, 
    &quot;Portfolio analysis&quot;, 7, 
    &quot;Standard indicative model in a known market&quot;, 3, 
    &quot;Standard Indicative model in a new market&quot;, 5,
    &quot;Detailed model&quot;, 6,
    &quot;Detailed multiphase or complex model&quot;, 7,
    0  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected SLA (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>