force-app/main/default/objects/Analytics_Model__c/fields/Firm_Proposal_Link__c.field-meta.xml
<CustomField>
    <fullName>Firm_Proposal_Link__c</fullName>
    <label>Proposal Link</label>
    <type>Url</type>
</CustomField>