force-app/main/default/objects/Analytics_Model__c/fields/Flow_Rate_Specify_Value_Unit__c.field-meta.xml
<CustomField>
    <fullName>Flow_Rate_Specify_Value_Unit__c</fullName>
    <label>Flow Rate: Specify Value &amp; Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>