force-app/main/default/objects/Analytics_Model__c/fields/Gas_Clean_up_Capex__c.field-meta.xml
<CustomField>
    <fullName>Gas_Clean_up_Capex__c</fullName>
    <label>Gas Clean-up Capex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>