force-app/main/default/objects/Analytics_Model__c/fields/Gas_Composition__c.field-meta.xml
<CustomField>
    <fullName>Gas_Composition__c</fullName>
    <label>Gas Composition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>