force-app/main/default/objects/Analytics_Model__c/fields/Gas_Utility__c.field-meta.xml
<CustomField>
    <fullName>Gas_Utility__c</fullName>
    <label>Gas Utility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>