force-app/main/default/objects/Analytics_Model__c/fields/Hardware_Price_per_KW__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Price_per_KW__c</fullName>
    <label>Capex Hardware $/kW (w/o referral fee)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>