force-app/main/default/objects/Analytics_Model__c/fields/If_ESA_is_the_customer_creditworthy__c.field-meta.xml
<CustomField>
    <fullName>If_ESA_is_the_customer_creditworthy__c</fullName>
    <formula>TEXT(Opportunity__r.Q_customer_credit_worthy__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>If ESA, is the customer creditworthy?</label>
    <type>Text</type>
</CustomField>