force-app/main/default/objects/Analytics_Model__c/fields/Incentives__c.field-meta.xml
<CustomField>
    <fullName>Incentives__c</fullName>
    <label>Incentives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SGIP</fullName>
            </value>
            <value>
                <fullName>LCFS</fullName>
            </value>
            <value>
                <fullName>eRIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>