force-app/main/default/objects/Analytics_Model__c/fields/Is_emissions_focus_needed__c.field-meta.xml
<CustomField>
    <fullName>Is_emissions_focus_needed__c</fullName>
    <label>Is emissions focus needed?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>