force-app/main/default/objects/Analytics_Model__c/fields/Is_resilience_needed__c.field-meta.xml
<CustomField>
    <fullName>Is_resilience_needed__c</fullName>
    <formula>TEXT(Opportunity__r.Q_resilience_needed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is resilience needed?</label>
    <type>Text</type>
</CustomField>