force-app/main/default/objects/Analytics_Model__c/fields/Is_resilience_needed_m__c.field-meta.xml
<CustomField>
    <fullName>Is_resilience_needed_m__c</fullName>
    <label>Is resilience needed?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>