force-app/main/default/objects/Analytics_Model__c/fields/Is_speed_to_power_needed__c.field-meta.xml
<CustomField>
    <fullName>Is_speed_to_power_needed__c</fullName>
    <formula>TEXT(Opportunity__r.Q_speed_to_power__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is speed to power needed?</label>
    <type>Text</type>
</CustomField>