force-app/main/default/objects/Analytics_Model__c/fields/Is_speed_to_power_needed_m__c.field-meta.xml
<CustomField>
    <fullName>Is_speed_to_power_needed_m__c</fullName>
    <label>Is speed to power needed?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>