force-app/main/default/objects/Analytics_Model__c/fields/ITC_incorporated_in_economics__c.field-meta.xml
<CustomField>
    <fullName>ITC_incorporated_in_economics__c</fullName>
    <label>ITC incorporated in economics?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>