force-app/main/default/objects/Analytics_Model__c/fields/KD_Test_Days__c.field-meta.xml
<CustomField>
    <fullName>KD_Test_Days__c</fullName>
    <formula>KD_Testing_TTR__c /8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TTR Recalc Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>