force-app/main/default/objects/Analytics_Model__c/fields/KD_Testing_TTR__c.field-meta.xml
<CustomField>
    <fullName>KD_Testing_TTR__c</fullName>
    <label>TTR Recalc</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>