force-app/main/default/objects/Analytics_Model__c/fields/KD_Testing_TTR_Notes__c.field-meta.xml
<CustomField>
    <fullName>KD_Testing_TTR_Notes__c</fullName>
    <label>TTR Recalc Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>