force-app/main/default/objects/Analytics_Model__c/fields/Lease_hurdle_rate__c.field-meta.xml
<CustomField>
    <fullName>Lease_hurdle_rate__c</fullName>
    <label>Lease hurdle rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>