force-app/main/default/objects/Analytics_Model__c/fields/Meter__c.field-meta.xml
<CustomField>
    <fullName>Meter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter</label>
    <referenceTo>Facility_Schedule__c</referenceTo>
    <relationshipLabel>Analytics Models</relationshipLabel>
    <relationshipName>Analytics_Models</relationshipName>
    <type>Lookup</type>
</CustomField>