force-app/main/default/objects/Analytics_Model__c/fields/Meter_ID__c.field-meta.xml
<CustomField>
    <fullName>Meter_ID__c</fullName>
    <label>Meter ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>