force-app/main/default/objects/Analytics_Model__c/fields/Methane_Context__c.field-meta.xml
<CustomField>
    <fullName>Methane_Context__c</fullName>
    <label>Methane Content (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>