force-app/main/default/objects/Analytics_Model__c/fields/Model_Link__c.field-meta.xml
<CustomField>
    <fullName>Model_Link__c</fullName>
    <label>Model Link</label>
    <type>Url</type>
</CustomField>