force-app/main/default/objects/Analytics_Model__c/fields/Model_requestor__c.field-meta.xml
<CustomField>
    <fullName>Model_requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Analytics_Models</relationshipName>
    <type>Lookup</type>
</CustomField>