force-app/main/default/objects/Analytics_Model__c/fields/Modeled_electric_tariff_after__c.field-meta.xml
<CustomField>
    <fullName>Modeled_electric_tariff_after__c</fullName>
    <label>Electric Tariff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>