force-app/main/default/objects/Analytics_Model__c/fields/Modeled_fuel_price_commodity_MMBTU__c.field-meta.xml
<CustomField>
    <fullName>Modeled_fuel_price_commodity_MMBTU__c</fullName>
    <label>Modeled fuel price - commodity ($/MMBTU)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>