force-app/main/default/objects/Analytics_Model__c/fields/Modeled_gas_tariff__c.field-meta.xml
<CustomField>
    <fullName>Modeled_gas_tariff__c</fullName>
    <label>Modeled gas tariff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>