force-app/main/default/objects/Analytics_Model__c/fields/Modeled_Purchase_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Modeled_Purchase_Vehicle__c</fullName>
    <label>Modeled Purchase Vehicle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>