force-app/main/default/objects/Analytics_Model__c/fields/My_Model_Requests__c.field-meta.xml
<CustomField>
    <fullName>My_Model_Requests__c</fullName>
    <formula>Opportunity__r.Owner.Alias = $User.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Model Requests</label>
    <type>Checkbox</type>
</CustomField>