force-app/main/default/objects/Analytics_Model__c/fields/O_M_year_1_pricing_escalation__c.field-meta.xml
<CustomField>
    <fullName>O_M_year_1_pricing_escalation__c</fullName>
    <label>O&amp;M year 1 pricing &amp; escalation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>