force-app/main/default/objects/Analytics_Model__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Analytics Models</relationshipLabel>
    <relationshipName>Analytics_Models</relationshipName>
    <type>Lookup</type>
</CustomField>