force-app/main/default/objects/Analytics_Model__c/fields/Opportunity_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Assessment__c</fullName>
    <label>Opportunity Assessment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>