force-app/main/default/objects/Analytics_Model__c/fields/Opportunity_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Folder_URL__c</fullName>
    <label>Opportunity Folder URL</label>
    <type>Url</type>
</CustomField>