force-app/main/default/objects/Analytics_Model__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>