force-app/main/default/objects/Analytics_Model__c/fields/Opportunity_Stage_user__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_user__c</fullName>
    <label>Model Type Opp Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Assessment</fullName>
            </value>
            <value>
                <fullName>Indicative Proposal</fullName>
            </value>
            <value>
                <fullName>Firm Proposal</fullName>
            </value>
            <value>
                <fullName>Negotiating Contract</fullName>
            </value>
            <value>
                <fullName>Preliminary Discussions</fullName>
            </value>
            <value>
                <fullName>Proposal/RFP Generation</fullName>
            </value>
            <value>
                <fullName>Term Sheet</fullName>
            </value>
            <value>
                <fullName>Final Site Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>