force-app/main/default/objects/Analytics_Model__c/fields/Optimization_of_cost_reductions_needed__c.field-meta.xml
<CustomField>
    <fullName>Optimization_of_cost_reductions_needed__c</fullName>
    <description>EDS-3626</description>
    <label>Optimization of cost reductions needed?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>