force-app/main/default/objects/Analytics_Model__c/fields/Performance_guarantee_considerations__c.field-meta.xml
<CustomField>
    <fullName>Performance_guarantee_considerations__c</fullName>
    <label>Performance guarantee considerations</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>