force-app/main/default/objects/Analytics_Model__c/fields/Performance_guarantee_type__c.field-meta.xml
<CustomField>
    <fullName>Performance_guarantee_type__c</fullName>
    <label>Performance guarantee type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Guarantee</fullName>
            </value>
            <value>
                <fullName>Availability Guarantee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>