force-app/main/default/objects/Analytics_Model__c/fields/Preferred_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Fuel_Type__c</fullName>
    <label>Preferred Fuel Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>Ammonia</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Syngas</fullName>
            </value>
            <value>
                <fullName>Directed Biogas</fullName>
            </value>
            <value>
                <fullName>On-site Biogas</fullName>
            </value>
            <value>
                <fullName>RNG</fullName>
            </value>
            <value>
                <fullName>Biogas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>