force-app/main/default/objects/Analytics_Model__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highest</fullName>
            </value>
            <value>
                <fullName>Per SLA</fullName>
            </value>
            <value>
                <fullName>P0</fullName>
                <isActive>false</isActive>
                <label>P0</label>
            </value>
            <value>
                <fullName>P1</fullName>
                <isActive>false</isActive>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <isActive>false</isActive>
                <label>P2</label>
            </value>
            <value>
                <fullName>P3</fullName>
                <isActive>false</isActive>
                <label>P3</label>
            </value>
            <value>
                <fullName>P4</fullName>
                <isActive>false</isActive>
                <label>P4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>