force-app/main/default/objects/Analytics_Model__c/fields/Purchase_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Vehicle__c</fullName>
    <label>Purchase Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESA</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Cash or ESA</fullName>
            </value>
            <value>
                <fullName>Build-Transfer</fullName>
            </value>
            <value>
                <fullName>Tolling</fullName>
            </value>
            <value>
                <fullName>To Be Determined</fullName>
            </value>
            <value>
                <fullName>Cash-MSE, ESA-Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>