force-app/main/default/objects/Analytics_Model__c/fields/Ready_for_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Review_Date__c</fullName>
    <label>Ready for Review Date</label>
    <type>Date</type>
</CustomField>