force-app/main/default/objects/Analytics_Model__c/fields/Ready_for_Review_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Review_Start_Time__c</fullName>
    <label>Ready for Review Start Time</label>
    <type>DateTime</type>
</CustomField>