force-app/main/default/objects/Analytics_Model__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <formula>Opportunity__r.Referral_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Partner</label>
    <type>Text</type>
</CustomField>