force-app/main/default/objects/Analytics_Model__c/fields/Referral_Partner_Fee_kW__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_Fee_kW__c</fullName>
    <label>Referral Partner Fee ($/kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>