force-app/main/default/objects/Analytics_Model__c/fields/Scope_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Sale__c</fullName>
    <formula>Opportunity__r.Sale_Scope__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope of Sale</label>
    <type>Text</type>
</CustomField>