force-app/main/default/objects/Analytics_Model__c/fields/Segment_Units__c.field-meta.xml
<CustomField>
    <fullName>Segment_Units__c</fullName>
    <formula>BTM_Segment__c&amp;&quot; - &quot;&amp;Text(Number_of_Units__c)&amp;&quot; Units&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment &amp; Units</label>
    <type>Text</type>
</CustomField>