force-app/main/default/objects/Analytics_Model__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Sites__c</referenceTo>
    <relationshipLabel>Analytics Models</relationshipLabel>
    <relationshipName>Analytics_Models</relationshipName>
    <type>Lookup</type>
</CustomField>