force-app/main/default/objects/Analytics_Model__c/fields/Site_challenges_peculiarities__c.field-meta.xml
<CustomField>
    <fullName>Site_challenges_peculiarities__c</fullName>
    <label>Site challenges/peculiarities</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>