force-app/main/default/objects/Analytics_Model__c/fields/Specifics_on_environmental_attributes__c.field-meta.xml
<CustomField>
    <fullName>Specifics_on_environmental_attributes__c</fullName>
    <label>Specifics on environmental attributes</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>