force-app/main/default/objects/Analytics_Model__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
                <default>true</default>
                <label>To Do</label>
            </value>
            <value>
                <fullName>Info Needed</fullName>
            </value>
            <value>
                <fullName>Ready for Analysis</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Finalize Proposal</fullName>
            </value>
            <value>
                <fullName>Proposal Check</fullName>
            </value>
            <value>
                <fullName>Ready for Dispatch</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>